--- a/plugins/varviewer/kmuddyvarviewerplugin.desktop
+++ b/plugins/varviewer/kmuddyvarviewerplugin.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Variable Viewer
+Name[de]=Variablenansicht
 Name[es]=Visor variable
 Name[et]=Muutujanäitaja
 Name[fr]=Afficheur de variables
