--- a/plugins/scripting/kmuddyscriptingplugin.desktop
+++ b/plugins/scripting/kmuddyscriptingplugin.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=External Scripting
+Name[de]=Externe Skripte
 Name[es]=Scripts externos
 Name[et]=Väline skriptimine
 Name[fr]=Scripts externes
@@ -12,6 +13,7 @@ Name[sv]=Externa skript
 Name[uk]=Зовнішні скрипти
 Name[x-test]=xxExternal Scriptingxx
 Comment=Adds support for external scripting.
+Comment[de]=Unterstützung für externe Skripte
 Comment[es]=Añade apoyo para scripts externos.
 Comment[et]=Välise skriptimise toetus.
 Comment[fr]=Ajoute la prise en charge des scripts externes.
