SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -12,6 +12,7 @@ Name[nl]=KMuddy
 Name[pl]=KMuddy
 Name[pt]=KMuddy
 Name[pt_BR]=KMuddy
+Name[sk]=KMuddy
 Name[sv]=Kmuddy
 Name[uk]=KMuddy
 Name[x-test]=xxKMuddyxx
