--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -22,6 +22,7 @@ Name[nl]=Standaard
 Name[pl]=Standard
 Name[pt]=Normal
 Name[pt_BR]=Padrão
+Name[sk]=Štandardné
 Name[sv]=Standard
 Name[ug]=ئۆلچەملىك
 Name[uk]=Стандарт
