--- a/plugins/strings/kmuddystringsplugin.desktop
+++ b/plugins/strings/kmuddystringsplugin.desktop
@@ -10,6 +10,7 @@ Name[nl]=Tekenreeksen
 Name[pl]=Ciągi znaków
 Name[pt]=Cadeias de Caracteres
 Name[pt_BR]=Strings
+Name[sk]=Reťazce
 Name[sv]=Strängar
 Name[ug]=تېكىستلەر
 Name[uk]=Рядки
