SVN_SILENT made messages (.desktop file)

--- a/libs/kmuddyplugin.desktop
+++ b/libs/kmuddyplugin.desktop
@@ -11,7 +11,7 @@ Comment[fr]=Module externe KMuddy
 Comment[nl]=Plugin van KMuddy
 Comment[pl]=Wtyczka KMuddy
 Comment[pt]='Plugin' do KMuddy
-Comment[pt_BR]=Plug-in do KMuddy
+Comment[pt_BR]=Plugin do KMuddy
 Comment[sv]=Insticksprogram för Kmuddy
 Comment[uk]=Додаток KMuddy
 Comment[x-test]=xxKMuddy Pluginxx
