--- a/plugins/converter/kmuddyconverterplugin.desktop
+++ b/plugins/converter/kmuddyconverterplugin.desktop
@@ -18,7 +18,7 @@ Comment[fr]=Ce module externe convertit les profils issus des anciennes versions
 Comment[nl]=Deze plugin converteert profielen van oude KMuddy-versies.
 Comment[pl]=Wtyczka ta przekształca profile ze starej wersji KMuddy.
 Comment[pt]=Este 'plugin' converte os perfis das versões antigas do KMuddy.
-Comment[pt_BR]=Este plug-in converte os perfis das versões antigas do KMuddy.
+Comment[pt_BR]=Este plugin converte os perfis das versões antigas do KMuddy.
 Comment[sv]=Det här insticksprogrammet konverterar profiler från gamla versioner av Kmuddy.
 Comment[uk]=За допомогою цього додатка можна перетворити дані профілів старих версій KMuddy.
 Comment[x-test]=xxThis plug-in converts profiles from old KMuddy versions.xx
