--- a/plugins/mapper/plugins/speedwalk/kmuddymapper_speedwalk.desktop
+++ b/plugins/mapper/plugins/speedwalk/kmuddymapper_speedwalk.desktop
@@ -6,7 +6,7 @@ Comment[et]=KMuddy tasemelooja kiirliikumise plugin
 Comment[fr]=Le module externe de la liste des déplacements automatiques (Speedwalking) pour l'éditeur de niveau (Mapper) de KMuddy
 Comment[pl]=Wtyczka listy szybkiego chodzenia dla mapowania kmuddy
 Comment[pt]=O 'plugin' de listas do Speedwalk para o mapeador do KMuddy
-Comment[pt_BR]=O plug-in de listas do Speedwalk para o mapeador do KMuddy
+Comment[pt_BR]=O plugin de listas do Speedwalk para o mapeador do KMuddy
 Comment[sv]=Insticksprogrammet för snabbgenomgång av listor för Kmuddy-karthantering
 Comment[uk]=Додаток списку проходження до засобу роботи з картами KMuddy
 Comment[x-test]=xxThe speedwalk list plugin for the kmuddy mapperxx
