--- a/plugins/test/kmuddytestplugin.desktop
+++ b/plugins/test/kmuddytestplugin.desktop
@@ -7,7 +7,7 @@ Name[et]=Testplugin
 Name[fr]=Module externe de test
 Name[pl]=Testowa wtyczka
 Name[pt]=A Testar o 'Plugin'
-Name[pt_BR]=Testando o plug-in
+Name[pt_BR]=Testando o plugin
 Name[sv]=Insticksprogram för test
 Name[uk]=Тестовий додаток
 Name[x-test]=xxTesting Plug-inxx
@@ -18,7 +18,7 @@ Comment[et]=Testplugin
 Comment[fr]=Module externe de test
 Comment[pl]=Testowa wtyczka
 Comment[pt]=A Testar o 'Plugin'
-Comment[pt_BR]=Testando o plug-in
+Comment[pt_BR]=Testando o plugin
 Comment[sv]=Insticksprogram för test
 Comment[uk]=Тестовий додаток
 Comment[x-test]=xxTesting Plug-inxx
