--- a/plugins/varviewer/kmuddyvarviewerplugin.desktop
+++ b/plugins/varviewer/kmuddyvarviewerplugin.desktop
@@ -17,7 +17,7 @@ Comment[et]=Muutujanäitaja akent pakkuv plugin.
 Comment[fr]=Ce module externe fournit une fenêtre d'affichage des variables
 Comment[pl]=Wtyczka zapewnia okno przeglądarki zmiennych.
 Comment[pt]=Este 'plugin' fornece uma janela de visualização de variáveis.
-Comment[pt_BR]=Este plug-in fornece uma janela de visualização de variáveis.
+Comment[pt_BR]=Este plugin fornece uma janela de visualização de variáveis.
 Comment[sv]=Det här insticksprogrammet tillhandahåller ett fönster för variabelvisning
 Comment[uk]=За допомогою цього додатка реалізовано роботу вікна перегляду змінних.
 Comment[x-test]=xxThis plug-in provides a variable viewer window.xx
