--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -8,7 +8,7 @@ Name[fr]=Module externe de modèle
 Name[nds]=Moduulvörlaag
 Name[pl]=Wtyczka szablonu
 Name[pt]=Modelo do 'Plugin'
-Name[pt_BR]=Modelo do plug-in
+Name[pt_BR]=Modelo do plugin
 Name[sv]=Mall för insticksprogram
 Name[uk]=Шаблон додатка
 Name[x-test]=xxPlugin Templatexx
@@ -20,7 +20,7 @@ Comment[fr]=Module externe de modèle
 Comment[nds]=Moduulvörlaag
 Comment[pl]=Wtyczka szablonu
 Comment[pt]=Modelo do 'Plugin'
-Comment[pt_BR]=Modelo do plug-in
+Comment[pt_BR]=Modelo do plugin
 Comment[sv]=Mall för insticksprogram
 Comment[uk]=Шаблон додатка
 Comment[x-test]=xxPlugin Templatexx
