--- a/plugins/strings/kmuddystringsplugin.desktop
+++ b/plugins/strings/kmuddystringsplugin.desktop
@@ -22,7 +22,7 @@ Comment[et]=Paljusid stringifunktsioone lisav plugin.
 Comment[fr]=Ce module externe ajoute de nombreuses fonctions pour les chaînes de caractères
 Comment[pl]=Wtyczka ta dodaj wiele funkcji ciągów znaków.
 Comment[pt]=Este 'plugin' adiciona muitas funções para cadeias de caracteres.
-Comment[pt_BR]=Este plug-in adiciona muitas funções para scripts.
+Comment[pt_BR]=Este plugin adiciona muitas funções para scripts.
 Comment[sv]=Det här insticksprogrammet lägger till en mängd strängfunktioner.
 Comment[uk]=За допомогою цього додатка реалізовано багато функцій, призначених для обробки рядків.
 Comment[x-test]=xxThis plug-in adds many strings functions.xx
