SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -7,7 +7,7 @@ Name[de]=KMuddy
 Name[es]=KMuddy
 Name[et]=KMuddy
 Name[fr]=KMuddy
-Name[km]= 
+Name[km]=KMuddy
 Name[nl]=KMuddy
 Name[pl]=KMuddy
 Name[pt]=KMuddy
@@ -24,6 +24,7 @@ GenericName=MUD client
 GenericName[es]=Cliente de MUD
 GenericName[et]=MUD-i klient
 GenericName[fr]=Client MUD (Donjon Multi Utilisateurs)
+GenericName[km]=ម៉ាស៊ីន​ភ្ញៀវ MUD
 GenericName[nl]=MUD-client
 GenericName[pl]=Klient MUD
 GenericName[pt]=Cliente de MUD
@@ -35,6 +36,7 @@ Comment=MUD client
 Comment[es]=Cliente de MUD
 Comment[et]=MUD-i klient
 Comment[fr]=Client MUD (Donjon Multi Utilisateurs)
+Comment[km]=ម៉ាស៊ីន​ភ្ញៀវ MUD
 Comment[nl]=MUD-client
 Comment[pl]=Klient MUD
 Comment[pt]=Cliente de MUD
