--- a/libs/kmuddyplugin.desktop
+++ b/libs/kmuddyplugin.desktop
@@ -8,6 +8,7 @@ Comment[de]=KMuddy-Modul
 Comment[es]=Complemento para KMuddy
 Comment[et]=KMuddy plugin
 Comment[fr]=Module externe KMuddy
+Comment[km]=កម្មវិធី​ជំនួយ KMuddy
 Comment[nl]=Plugin van KMuddy
 Comment[pl]=Wtyczka KMuddy
 Comment[pt]='Plugin' do KMuddy
