--- a/plugins/mapper/kmuddymapper.desktop
+++ b/plugins/mapper/kmuddymapper.desktop
@@ -4,6 +4,7 @@ Comment=A Mapper for KMuddy
 Comment[es]=Mapeador para KMuddy
 Comment[et]=KMuddy tasemelooja
 Comment[fr]=Un éditeur de niveau (Mapper) pour KMuddy
+Comment[km]=កម្មវិធី​ផ្គូផ្គង​សម្រាប់ KMuddy
 Comment[pl]=Mapowanie dla KMuddy
 Comment[pt]=Um Mapeador do KMuddy
 Comment[pt_BR]=Um mapeador do KMuddy
@@ -14,6 +15,7 @@ Name=Kmuddy Mapper
 Name[es]=Mapeador para Kmuddy
 Name[et]=KMuddy tasemelooja
 Name[fr]=Éditeur de niveau (Mapper) pour KMuddy
+Name[km]=កម្មវិធី​ផ្គូផ្គង Kmuddy
 Name[pl]=Mapowanie Kmuddy
 Name[pt]=Um Mapeador do KMuddy
 Name[pt_BR]=Mapeador do KMuddy
