--- a/plugins/test/kmuddytestplugin.desktop
+++ b/plugins/test/kmuddytestplugin.desktop
@@ -5,6 +5,7 @@ Name[de]=Test-Modul
 Name[es]=Probando el complemento
 Name[et]=Testplugin
 Name[fr]=Module externe de test
+Name[km]=សាកល្បង​កម្មវិធី​ជំនួយ
 Name[pl]=Testowa wtyczka
 Name[pt]=A Testar o 'Plugin'
 Name[pt_BR]=Testando o plugin
@@ -16,6 +17,7 @@ Comment[de]=Test-Modul
 Comment[es]=Probando el complemento
 Comment[et]=Testplugin
 Comment[fr]=Module externe de test
+Comment[km]=សាកល្បង​កម្មវិធី​ជំនួយ
 Comment[pl]=Testowa wtyczka
 Comment[pt]=A Testar o 'Plugin'
 Comment[pt_BR]=Testando o plugin
