--- a/plugins/vartrigs/kmuddyvartrigplugin.desktop
+++ b/plugins/vartrigs/kmuddyvartrigplugin.desktop
@@ -4,6 +4,7 @@ Name=Variable Triggers
 Name[es]=Desencadenantes variables
 Name[et]=Muutujapäästikud
 Name[fr]=Déclencheurs associés aux variables
+Name[km]=គន្លឹះ​អថេរ
 Name[pl]=Wyzwalacze zmiennych
 Name[pt]=Activações de Variáveis
 Name[pt_BR]=Acionamentos da variável
@@ -14,6 +15,7 @@ Comment=Adds supports for triggers that fire off variable changes.
 Comment[es]=Añade apoyo para desencadenantes que disparan cambios variables.
 Comment[et]=Muutujate muutumise puhul käivituvate päästikute toetus.
 Comment[fr]=Ajoute pour les déclencheurs qui se déclenchent lors de modifications de variables
+Comment[km]=បន្ថែម​ការ​គាំទ្រ​គន្លឹះ​ដែល​មាន​ការ​ផ្លាស់ប្ដូរ​អថេរ ។
 Comment[pl]=Dodaj obsługę dla wyzwalaczy, który wyzwalają zmiany zmiennych.
 Comment[pt]=Adiciona o suporte para activações que despoletam mudanças de variáveis.
 Comment[pt_BR]=Adiciona suporte para acionamentos de alterações de variáveis.
