--- a/plugins/varviewer/kmuddyvarviewerplugin.desktop
+++ b/plugins/varviewer/kmuddyvarviewerplugin.desktop
@@ -5,6 +5,7 @@ Name[de]=Variablenansicht
 Name[es]=Visor variable
 Name[et]=Muutujanäitaja
 Name[fr]=Afficheur de variables
+Name[km]=កម្មវិធី​មើល​អថេរ
 Name[pl]=Przeglądarka zmiennych
 Name[pt]=Visualizador de Variáveis
 Name[pt_BR]=Visualizador de variáveis
@@ -15,6 +16,7 @@ Comment=This plug-in provides a variable viewer window.
 Comment[es]=Este complemento proporciona una ventana de visor variable.
 Comment[et]=Muutujanäitaja akent pakkuv plugin.
 Comment[fr]=Ce module externe fournit une fenêtre d'affichage des variables
+Comment[km]=កម្មវិធី​ជំនួយ​នេះ​ផ្ដល់​បង្អួច​កម្មវិធី​មើល​អថេរ ។
 Comment[pl]=Wtyczka zapewnia okno przeglądarki zmiennych.
 Comment[pt]=Este 'plugin' fornece uma janela de visualização de variáveis.
 Comment[pt_BR]=Este plugin fornece uma janela de visualização de variáveis.
