--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -5,6 +5,7 @@ Name[de]=Modulvorlage
 Name[es]=Plantilla para complementos
 Name[et]=Mallplugin
 Name[fr]=Module externe de modèle
+Name[km]=ពុម្ព​កម្មវិធី​ជំនួយ
 Name[nds]=Moduulvörlaag
 Name[pl]=Wtyczka szablonu
 Name[pt]=Modelo do 'Plugin'
@@ -17,6 +18,7 @@ Comment[de]=Modulvorlage
 Comment[es]=Plantilla para complementos
 Comment[et]=Mallplugin
 Comment[fr]=Module externe de modèle
+Comment[km]=ពុម្ព​កម្មវិធី​ជំនួយ
 Comment[nds]=Moduulvörlaag
 Comment[pl]=Wtyczka szablonu
 Comment[pt]=Modelo do 'Plugin'
