--- a/plugins/mapper/kmuddymapperplugin.desktop
+++ b/plugins/mapper/kmuddymapperplugin.desktop
@@ -5,6 +5,7 @@ Name=KMuddy Mapper Tool
 Name[es]=Herramienta mapeadora para KMuddy
 Name[et]=KMuddy tasemelooja
 Name[fr]=Outils d'édition de niveau (Mapper) pour KMuddy
+Name[km]=ឧបករណ៍​កម្មវិធី​ផ្គូផ្គង KMuddy
 Name[pl]=Narzędzie mapowania KMuddy
 Name[pt]=Ferramenta de Mapeamento do KMuddy
 Name[pt_BR]=Ferramenta de mapeamento do KMuddy
