--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -4,6 +4,7 @@ Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
 Comment[et]=Standardsed tasemelooja tööriistad ja vaated
 Comment[fr]=Les afficheurs et éditeurs de niveau standards
+Comment[km]=ទិដ្ឋភាព និង​ឧបករណ៍​កម្មវិធី​ផ្គូផ្គង​ស្តង់ដារ
 Comment[pl]=Standardowe narzędzia mapowania i widoków
 Comment[pt]=As ferramentas e vistas normais do mapeador
 Comment[pt_BR]=As ferramentas e visualizações normais do mapeador
@@ -17,6 +18,7 @@ Name[es]=Estándar
 Name[et]=Standardne
 Name[fr]=Standard
 Name[ga]=Caighdeánach
+Name[km]=ស្តង់ដារ
 Name[nds]=Standard
 Name[nl]=Standaard
 Name[pl]=Standard
@@ -31,6 +33,7 @@ Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
 Comment[et]=Standardsed tasemelooja tööriistad ja vaated
 Comment[fr]=Les afficheurs et éditeurs de niveau standards
+Comment[km]=ទិដ្ឋភាព និង​ឧបករណ៍​កម្មវិធី​ផ្គូផ្គង​ស្តង់ដារ
 Comment[pl]=Standardowe narzędzia mapowania i widoków
 Comment[pt]=As ferramentas e vistas normais do mapeador
 Comment[pt_BR]=As ferramentas e visualizações normais do mapeador
