--- a/plugins/scripting/kmuddyscriptingplugin.desktop
+++ b/plugins/scripting/kmuddyscriptingplugin.desktop
@@ -5,6 +5,7 @@ Name[de]=Externe Skripte
 Name[es]=Scripts externos
 Name[et]=Väline skriptimine
 Name[fr]=Scripts externes
+Name[km]=ការ​ស្គ្រីប​ខាងក្រៅ
 Name[nl]=Externe scripting
 Name[pl]=Zewnętrzny skrypt
 Name[pt]=Programação Externa
@@ -17,6 +18,7 @@ Comment[de]=Unterstützung für externe Skripte
 Comment[es]=Añade apoyo para scripts externos.
 Comment[et]=Välise skriptimise toetus.
 Comment[fr]=Ajoute la prise en charge des scripts externes.
+Comment[km]=បន្ថែម​ការ​គាំទ្រ​សម្រាប់​ស្គ្រីប​ខាងក្រៅ ។
 Comment[pl]=Dodaje obsługę dla zewnętrznych skryptów
 Comment[pt]=Adiciona o suporte para programas externos.
 Comment[pt_BR]=Adiciona suporte para scripts externos.
