--- a/plugins/strings/kmuddystringsplugin.desktop
+++ b/plugins/strings/kmuddystringsplugin.desktop
@@ -6,6 +6,7 @@ Name[de]=Zeichenketten
 Name[es]=Cadenas
 Name[et]=Stringid
 Name[fr]=Chaîne de caractères
+Name[km]=ឃ្លា
 Name[nl]=Tekenreeksen
 Name[pl]=Ciągi znaków
 Name[pt]=Cadeias de Caracteres
@@ -20,6 +21,7 @@ Comment[de]=Ein Modul für viele Zeichenketten-Funktionen.
 Comment[es]=Este complemento añade muchas funciones de cadena.
 Comment[et]=Paljusid stringifunktsioone lisav plugin.
 Comment[fr]=Ce module externe ajoute de nombreuses fonctions pour les chaînes de caractères
+Comment[km]=កម្មវិធី​ជំនួយ​នេះ​បន្ថែម​មុខងារ​ឃ្លា​ច្រើន ។
 Comment[pl]=Wtyczka ta dodaj wiele funkcji ciągów znaków.
 Comment[pt]=Este 'plugin' adiciona muitas funções para cadeias de caracteres.
 Comment[pt_BR]=Este plugin adiciona muitas funções para scripts.
