SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -23,7 +23,7 @@ DocPath=kmuddy/index.html
 GenericName=MUD client
 GenericName[es]=Cliente de MUD
 GenericName[et]=MUD-i klient
-GenericName[fr]=Client MUD (Donjon Multi Utilisateurs)
+GenericName[fr]=Client MUD (Multi Utilisateurs Donjons)
 GenericName[km]=ម៉ាស៊ីន​ភ្ញៀវ MUD
 GenericName[nl]=MUD-client
 GenericName[pl]=Klient MUD
