--- a/plugins/mapper/kmuddymapper.desktop
+++ b/plugins/mapper/kmuddymapper.desktop
@@ -3,7 +3,7 @@ Type=Service
 Comment=A Mapper for KMuddy
 Comment[es]=Mapeador para KMuddy
 Comment[et]=KMuddy tasemelooja
-Comment[fr]=Un éditeur de niveau (Mapper) pour KMuddy
+Comment[fr]=Un éditeur de niveau pour KMuddy
 Comment[km]=កម្មវិធី​ផ្គូផ្គង​សម្រាប់ KMuddy
 Comment[pl]=Mapowanie dla KMuddy
 Comment[pt]=Um Mapeador do KMuddy
