SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -7,6 +7,7 @@ Name[de]=KMuddy
 Name[es]=KMuddy
 Name[et]=KMuddy
 Name[fr]=KMuddy
+Name[hu]=KMuddy
 Name[km]=KMuddy
 Name[nl]=KMuddy
 Name[pl]=KMuddy
@@ -24,6 +25,7 @@ GenericName=MUD client
 GenericName[es]=Cliente de MUD
 GenericName[et]=MUD-i klient
 GenericName[fr]=Client MUD (Multi Utilisateurs Donjons)
+GenericName[hu]=MUD kliens
 GenericName[km]=ម៉ាស៊ីន​ភ្ញៀវ MUD
 GenericName[nl]=MUD-client
 GenericName[pl]=Klient MUD
@@ -36,6 +38,7 @@ Comment=MUD client
 Comment[es]=Cliente de MUD
 Comment[et]=MUD-i klient
 Comment[fr]=Client MUD (Donjon Multi Utilisateurs)
+Comment[hu]=MUD kliens
 Comment[km]=ម៉ាស៊ីន​ភ្ញៀវ MUD
 Comment[nl]=MUD-client
 Comment[pl]=Klient MUD
