--- a/plugins/mapper/plugins/speedwalk/kmuddymapper_speedwalk.desktop
+++ b/plugins/mapper/plugins/speedwalk/kmuddymapper_speedwalk.desktop
@@ -15,6 +15,7 @@ Name=Speedwalk
 Name[es]=Speedwalk
 Name[et]=Kiirliikumine
 Name[fr]=Déplacements automatiques (Speedwalking)
+Name[hu]=Speedwalk
 Name[km]=Speedwalk
 Name[nl]=Speedwalk
 Name[pl]=Szybkie chodzenie
