--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -18,6 +18,7 @@ Name[es]=Estándar
 Name[et]=Standardne
 Name[fr]=Standard
 Name[ga]=Caighdeánach
+Name[hu]=Szabványos
 Name[km]=ស្តង់ដារ
 Name[nds]=Standard
 Name[nl]=Standaard
