--- a/plugins/scripting/kmuddyscriptingplugin.desktop
+++ b/plugins/scripting/kmuddyscriptingplugin.desktop
@@ -5,6 +5,7 @@ Name[de]=Externe Skripte
 Name[es]=Scripts externos
 Name[et]=Väline skriptimine
 Name[fr]=Scripts externes
+Name[hu]=Külső szkriptelés
 Name[km]=ការ​ស្គ្រីប​ខាងក្រៅ
 Name[nl]=Externe scripting
 Name[pl]=Zewnętrzny skrypt
