--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -5,6 +5,7 @@ Name[de]=Modulvorlage
 Name[es]=Plantilla para complementos
 Name[et]=Mallplugin
 Name[fr]=Module externe de modèle
+Name[hu]=Bővítménysablon
 Name[km]=ពុម្ព​កម្មវិធី​ជំនួយ
 Name[nds]=Moduulvörlaag
 Name[pl]=Wtyczka szablonu
@@ -18,6 +19,7 @@ Comment[de]=Modulvorlage
 Comment[es]=Plantilla para complementos
 Comment[et]=Mallplugin
 Comment[fr]=Module externe de modèle
+Comment[hu]=Bővítménysablon
 Comment[km]=ពុម្ព​កម្មវិធី​ជំនួយ
 Comment[nds]=Moduulvörlaag
 Comment[pl]=Wtyczka szablonu
