--- a/plugins/converter/kmuddyconverterplugin.desktop
+++ b/plugins/converter/kmuddyconverterplugin.desktop
@@ -4,6 +4,7 @@ Name=Profile Converter
 Name[es]=Conversor de perfiles
 Name[et]=Profiiliteisendaja
 Name[fr]=Convertisseur de profil
+Name[hu]=Profilátalakító
 Name[km]=កម្មវិធី​បម្លែង​ទម្រង់
 Name[nl]=Profielconverter
 Name[pl]=Przekształcanie profilu
@@ -16,6 +17,7 @@ Comment=This plug-in converts profiles from old KMuddy versions.
 Comment[es]=Este complemento convierte perfiles desde versiones antiguas de KMuddy.
 Comment[et]=Plugin, mis teisendab profiile KMuddy vanematest versioonidest.
 Comment[fr]=Ce module externe convertit les profils issus des anciennes versions de KMuddy
+Comment[hu]=Ez a bővítmény átalakítja a profilokat a régi KMuddy verziókból.
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ​បម្លែង​ទម្រង់​ពី​កំណែ KMuddy ចាស់ៗ ។
 Comment[nl]=Deze plugin converteert profielen van oude KMuddy-versies.
 Comment[pl]=Wtyczka ta przekształca profile ze starej wersji KMuddy.
