--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -8,6 +8,7 @@ Name[fr]=Module externe de modèle
 Name[hu]=Bővítménysablon
 Name[km]=ពុម្ព​កម្មវិធី​ជំនួយ
 Name[nds]=Moduulvörlaag
+Name[nl]=Plug-in-sjabloon
 Name[pl]=Wtyczka szablonu
 Name[pt]=Modelo do 'Plugin'
 Name[pt_BR]=Modelo do plugin
@@ -22,6 +23,7 @@ Comment[fr]=Module externe de modèle
 Comment[hu]=Bővítménysablon
 Comment[km]=ពុម្ព​កម្មវិធី​ជំនួយ
 Comment[nds]=Moduulvörlaag
+Comment[nl]=Sjabloon van plug-in
 Comment[pl]=Wtyczka szablonu
 Comment[pt]=Modelo do 'Plugin'
 Comment[pt_BR]=Modelo do plugin
