--- a/plugins/strings/kmuddystringsplugin.desktop
+++ b/plugins/strings/kmuddystringsplugin.desktop
@@ -22,6 +22,7 @@ Comment[es]=Este complemento añade muchas funciones de cadena.
 Comment[et]=Paljusid stringifunktsioone lisav plugin.
 Comment[fr]=Ce module externe ajoute de nombreuses fonctions pour les chaînes de caractères
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ​បន្ថែម​មុខងារ​ឃ្លា​ច្រើន ។
+Comment[nl]=Deze plug-in voegt veel functies voor tekenreeksen toe.
 Comment[pl]=Wtyczka ta dodaj wiele funkcji ciągów znaków.
 Comment[pt]=Este 'plugin' adiciona muitas funções para cadeias de caracteres.
 Comment[pt_BR]=Este plugin adiciona muitas funções para scripts.
