--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -7,6 +7,7 @@ Name[de]=KMuddy
 Name[es]=KMuddy
 Name[et]=KMuddy
 Name[fr]=KMuddy
+Name[gl]=KMuddy
 Name[hu]=KMuddy
 Name[km]=KMuddy
 Name[nl]=KMuddy
