SVN_SILENT made messages (.desktop file)

--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -12,6 +12,7 @@ Comment[sv]=De vanliga kartverktygen och vyerna
 Comment[uk]=Стандартні засоби і панелі перегляду карт
 Comment[x-test]=xxThe standard mapper tools and viewsxx
 Name=Standard
+Name[bs]=Standardno
 Name[cs]=Standardní
 Name[de]=Standard
 Name[es]=Estándar
