SVN_SILENT made messages (.desktop file)

--- a/plugins/converter/kmuddyconverterplugin.desktop
+++ b/plugins/converter/kmuddyconverterplugin.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Profile Converter
+Name[de]=Profil-Umwandlung
 Name[es]=Conversor de perfiles
 Name[et]=Profiiliteisendaja
 Name[fr]=Convertisseur de profil
