SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -10,6 +10,7 @@ Name[fr]=KMuddy
 Name[gl]=KMuddy
 Name[hu]=KMuddy
 Name[km]=KMuddy
+Name[mr]=के-मडी
 Name[nl]=KMuddy
 Name[pl]=KMuddy
 Name[pt]=KMuddy
@@ -29,6 +30,7 @@ GenericName[et]=MUD-i klient
 GenericName[fr]=Client MUD (Multi Utilisateurs Donjons)
 GenericName[hu]=MUD kliens
 GenericName[km]=ម៉ាស៊ីន​ភ្ញៀវ MUD
+GenericName[mr]=एमयुडी ग्राहक
 GenericName[nl]=MUD-client
 GenericName[pl]=Klient MUD
 GenericName[pt]=Cliente de MUD
@@ -43,6 +45,7 @@ Comment[et]=MUD-i klient
 Comment[fr]=Client MUD (Donjon Multi Utilisateurs)
 Comment[hu]=MUD kliens
 Comment[km]=ម៉ាស៊ីន​ភ្ញៀវ MUD
+Comment[mr]=एमयुडी ग्राहक
 Comment[nl]=MUD-client
 Comment[pl]=Klient MUD
 Comment[pt]=Cliente de MUD
