--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -21,6 +21,7 @@ Name[fr]=Standard
 Name[ga]=Caighdeánach
 Name[hu]=Szabványos
 Name[km]=ស្តង់ដារ
+Name[mr]=प्रमाणित
 Name[nds]=Standard
 Name[nl]=Standaard
 Name[pl]=Standard
