--- a/plugins/scripting/kmuddyscriptingplugin.desktop
+++ b/plugins/scripting/kmuddyscriptingplugin.desktop
@@ -7,6 +7,7 @@ Name[et]=Väline skriptimine
 Name[fr]=Scripts externes
 Name[hu]=Külső szkriptelés
 Name[km]=ការ​ស្គ្រីប​ខាងក្រៅ
+Name[mr]=एक्सटर्नल स्क्रिप्टिंग
 Name[nl]=Externe scripting
 Name[pl]=Zewnętrzny skrypt
 Name[pt]=Programação Externa
