--- a/plugins/strings/kmuddystringsplugin.desktop
+++ b/plugins/strings/kmuddystringsplugin.desktop
@@ -7,6 +7,7 @@ Name[es]=Cadenas
 Name[et]=Stringid
 Name[fr]=Chaîne de caractères
 Name[km]=ឃ្លា
+Name[mr]=स्ट्रिंग्स
 Name[nl]=Tekenreeksen
 Name[pl]=Ciągi znaków
 Name[pt]=Cadeias de Caracteres
