--- a/plugins/varviewer/kmuddyvarviewerplugin.desktop
+++ b/plugins/varviewer/kmuddyvarviewerplugin.desktop
@@ -6,6 +6,7 @@ Name[es]=Visor variable
 Name[et]=Muutujanäitaja
 Name[fr]=Afficheur de variables
 Name[km]=កម្មវិធី​មើល​អថេរ
+Name[mr]=परिवर्तनीय प्रदर्शक
 Name[pl]=Przeglądarka zmiennych
 Name[pt]=Visualizador de Variáveis
 Name[pt_BR]=Visualizador de variáveis
