--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -7,6 +7,7 @@ Name[et]=Mallplugin
 Name[fr]=Module externe de modèle
 Name[hu]=Bővítménysablon
 Name[km]=ពុម្ព​កម្មវិធី​ជំនួយ
+Name[mr]=प्लगइन नमूना
 Name[nds]=Moduulvörlaag
 Name[nl]=Plug-in-sjabloon
 Name[pl]=Wtyczka szablonu
@@ -22,6 +23,7 @@ Comment[et]=Mallplugin
 Comment[fr]=Module externe de modèle
 Comment[hu]=Bővítménysablon
 Comment[km]=ពុម្ព​កម្មវិធី​ជំនួយ
+Comment[mr]=प्लगइन नमूना
 Comment[nds]=Moduulvörlaag
 Comment[nl]=Sjabloon van plug-in
 Comment[pl]=Wtyczka szablonu
