--- a/libs/kmuddyplugin.desktop
+++ b/libs/kmuddyplugin.desktop
@@ -10,6 +10,7 @@ Comment[et]=KMuddy plugin
 Comment[fr]=Module externe KMuddy
 Comment[hu]=KMuddy bővítmény
 Comment[km]=កម្មវិធី​ជំនួយ KMuddy
+Comment[mr]=के-मडी प्लगइन
 Comment[nl]=Plugin van KMuddy
 Comment[pl]=Wtyczka KMuddy
 Comment[pt]='Plugin' do KMuddy
