--- a/plugins/converter/kmuddyconverterplugin.desktop
+++ b/plugins/converter/kmuddyconverterplugin.desktop
@@ -7,6 +7,7 @@ Name[et]=Profiiliteisendaja
 Name[fr]=Convertisseur de profil
 Name[hu]=Profilátalakító
 Name[km]=កម្មវិធី​បម្លែង​ទម្រង់
+Name[mr]=रूपरेषा परिवर्तक
 Name[nl]=Profielconverter
 Name[pl]=Przekształcanie profilu
 Name[pt]=Conversor de Perfis
