--- a/plugins/test/kmuddytestplugin.desktop
+++ b/plugins/test/kmuddytestplugin.desktop
@@ -6,6 +6,7 @@ Name[es]=Probando el complemento
 Name[et]=Testplugin
 Name[fr]=Module externe de test
 Name[km]=សាកល្បង​កម្មវិធី​ជំនួយ
+Name[mr]=प्लगइनची चाचणी घेत आहे
 Name[nl]=Testen-plug-in
 Name[pl]=Testowa wtyczka
 Name[pt]=A Testar o 'Plugin'
@@ -19,6 +20,7 @@ Comment[es]=Probando el complemento
 Comment[et]=Testplugin
 Comment[fr]=Module externe de test
 Comment[km]=សាកល្បង​កម្មវិធី​ជំនួយ
+Comment[mr]=प्लगइनची चाचणी घेत आहे
 Comment[nl]=Plug-in voor testen
 Comment[pl]=Testowa wtyczka
 Comment[pt]=A Testar o 'Plugin'
