Remove erroneous double-quotes around %c in Exec line

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -20,7 +20,7 @@ Name[sv]=Kmuddy
 Name[uk]=KMuddy
 Name[x-test]=xxKMuddyxx
 Type=Application
-Exec=kmuddy -caption "%c" %i %m
+Exec=kmuddy -caption %c %i %m
 Icon=kmuddy.png
 DocPath=kmuddy/index.html
 GenericName=MUD client
