A lot more work on the mapper, movement tracking, exit painting, etc, now work.
Also get rid of the concept of per-level zones, there's now only one zone. This is in preparation for a new zones list that will replace the removed one, using profile saving.

--- a/plugins/mapper/CMakeLists.txt
+++ b/plugins/mapper/CMakeLists.txt
@@ -31,6 +31,7 @@ set(kmuddymapper_PART_SRCS
    cmapcmdelementdelete.cpp 
    cmapcmdtogglepathtwoway.cpp 
    cmapcmdmovemap.cpp 
+   cmapcmdmoveplayer.cpp 
    cmapcmdleveldelete.cpp 
    cmapcmdlevelcreate.cpp 
    cmappropertiespanebase.cpp 
