start kde5 migration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,17 @@ project(kmuddy)
 cmake_minimum_required(VERSION 2.8)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} )
 
-find_package(KDE4 REQUIRED)
+find_package(ECM REQUIRED NO_MODULE)
+set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
+
+find_package(Qt5 REQUIRED COMPONENTS Widgets)
+find_package(KF5 CONFIG REQUIRED KCoreAddons I18n KIOCore Phonon)
+
+include(KDEInstallDirs)
+include(KDECompilerSettings NO_POLICY_SCOPE))
+include(KDECMakeSettings)
+include(FeatureSummary)
+include(KDEFrameworkCompilerSettings)
 
 macro_optional_find_package(MXP)
 if (MXP_FOUND)
@@ -17,9 +27,7 @@ configure_file(config-mxp.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-mxp.h )
 
 #set(CMAKE_VERBOSE_MAKEFILE ON)
 
-add_definitions(${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
-
-link_directories(${KDE4_LIB_DIR})
+add_definitions(${QT_DEFINITIONS})
 
 #include(ConvenienceLibs.cmake)
 
